--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ itsdangerous==2.1.1
 click==8.1.2
 SQLAlchemy==1.4.29
 Flask-SQLAlchemy==2.5.1
-Flask-Login==0.5.0
-Flask-WTF==1.0.3
-WTForms==3.0.2
-Flask-Cors==3.1.1
-Flask-Mail==0.9.1
-Flask-RESTful==0.3.9
-Flask-Script==2.0.6
-requests==2.27.1
+Flask-Migrate
+Flask-Login=
+Flask-WTF
+WTForms
+Flask-Cors
+Flask-Mail
+Flask-RESTful
+Flask-Script
+requests
